# ByteCode-Bot

./: Cargo.toml
bot_macros/: Cargo.toml
bot_macros/src/: lib.rs
src/: main.rs
src/commands/: mod.rs  register.rs
src/events/: mod.rs  on_message.rs  on_ready.rs
src/models/: users.rs
src/utils/: translate.rs
