[package]
name = "ByteCode-Bot"
version = "0.1.0"
edition = "2024"


[dependencies]
bot_macros = { path = "bot_macros" }

sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
poise = "0.6.1"
futures = "0.3"
serenity = "0.12.4"
tokio = { version = "1.37", features = ["full", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
inventory = "0.3"
chrono = "0.4.41"
log = "0.4.27"
anyhow = "1.0"
urlencoding = "2.1.3"
serde_json = "1.0.140"

[dependencies.syn]
version = "2"
optional = true

[features]
default = []